[gd_scene load_steps=23 format=3 uid="uid://c36hjx2gmmt0g"]

[ext_resource type="Script" uid="uid://d2kns86j4smy6" path="res://Scripts/select_game.gd" id="1_jcnox"]
[ext_resource type="Texture2D" uid="uid://cl1w43dcp2vvn" path="res://Assets/Backgrounds/GS_Background.png" id="1_ne6bh"]
[ext_resource type="Texture2D" uid="uid://cr104hvjikjnm" path="res://Assets/Various/WÃ¤hle dein Spiel!.png" id="2_no204"]
[ext_resource type="Texture2D" uid="uid://bbxqjj0t6an8f" path="res://Assets/Buttons/play_s_b.svg" id="3_2awo4"]
[ext_resource type="Texture2D" uid="uid://dah3uykqybh6o" path="res://Assets/Buttons/play_s_b_pressed.svg" id="4_jcnox"]
[ext_resource type="Texture2D" uid="uid://d4koe26xfs3w3" path="res://Assets/Buttons/question__b.svg" id="6_7g5tu"]
[ext_resource type="Texture2D" uid="uid://dtfydy132bf67" path="res://Assets/Buttons/question__b_pressed.svg" id="7_kua6a"]
[ext_resource type="Texture2D" uid="uid://bcjgu3oeu1ca3" path="res://Assets/HandGestures/Five_Hand.png" id="8_ffxa7"]
[ext_resource type="Script" path="res://Scripts/mini_game_animations.gd" id="8_ojtqv"]
[ext_resource type="Texture2D" uid="uid://dh2v43puv0s60" path="res://Assets/Buttons/exit_x_b.svg" id="8_q2qx5"]
[ext_resource type="Texture2D" uid="uid://bb2kspli54h08" path="res://Assets/HandGestures/Three_Hand.png" id="9_dkkfp"]
[ext_resource type="Texture2D" uid="uid://dgr7upkgr20p0" path="res://Assets/Buttons/exit_x_b_pressed.svg" id="9_qltld"]
[ext_resource type="Texture2D" uid="uid://hulp2d8i1mam" path="res://Assets/Monsters/Nom_w_Basket.png" id="10_1j3ny"]
[ext_resource type="Texture2D" uid="uid://ddhdxwpxygks4" path="res://Assets/Various/DialogBubble_2.png" id="11_1j3ny"]
[ext_resource type="Texture2D" uid="uid://d24138msn8esq" path="res://Assets/Monsters/Shadow.png" id="11_clv4g"]
[ext_resource type="Texture2D" uid="uid://cmggmxntu3oyk" path="res://Assets/Food/Sandwich_1.png" id="11_dkkfp"]

[sub_resource type="Animation" id="Animation_1j3ny"]
resource_name = "Hello"
length = 1.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand_R:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-2.87979, -3.05433, -2.87979]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand_L:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.366519, -0.174533, -0.349066]
}

[sub_resource type="Animation" id="Animation_ojtqv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand_R:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-2.89376]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand_L:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.366519]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_clv4g"]
_data = {
&"Hello": SubResource("Animation_1j3ny"),
&"RESET": SubResource("Animation_ojtqv")
}

[sub_resource type="Animation" id="Animation_clv4g"]
resource_name = "Jumping_Monster"
length = 1.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monster_w_Basket:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.00833333, 0.691667, 1.39167),
"transitions": PackedFloat32Array(0.594604, 0.594604, 0.594604),
"update": 0,
"values": [0.0261799, -0.0261799, 0.0698132]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Monster_w_Basket:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.00833333, 0.691667, 1.39167),
"transitions": PackedFloat32Array(0.594604, 0.594604, 0.594604),
"update": 0,
"values": [Vector2(898.234, 500), Vector2(898.234, 490), Vector2(898.234, 500)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sandwich:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.00833333, 0.691667, 1.39167),
"transitions": PackedFloat32Array(0.594604, 0.594604, 0.594604),
"update": 0,
"values": [0.0, 0.174533, 0.0]
}

[sub_resource type="Animation" id="Animation_0yxtp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monster_w_Basket:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0261799]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Monster_w_Basket:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(898.234, 500)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sandwich:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2qx5"]
_data = {
&"Jumping_Monster": SubResource("Animation_clv4g"),
&"RESET": SubResource("Animation_0yxtp")
}

[node name="Select_Game" type="Node2D"]
script = ExtResource("1_jcnox")

[node name="Brackground" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 800.0
texture = ExtResource("1_ne6bh")
metadata/_edit_lock_ = true

[node name="SG_Title" type="TextureRect" parent="."]
offset_left = 367.0
offset_top = 42.0
offset_right = 906.0
offset_bottom = 158.0
texture = ExtResource("2_no204")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Button_Manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 113.0
offset_top = 634.0
offset_right = 1166.0
offset_bottom = 752.0

[node name="Play_HG" type="TextureButton" parent="Button_Manager"]
layout_mode = 0
offset_left = 19.0
offset_top = 27.0
offset_right = 259.0
offset_bottom = 93.0
texture_normal = ExtResource("3_2awo4")
texture_pressed = ExtResource("4_jcnox")
stretch_mode = 0

[node name="Play_NomNom" type="TextureButton" parent="Button_Manager"]
layout_mode = 0
offset_left = 699.0
offset_top = 27.0
offset_right = 939.0
offset_bottom = 93.0
texture_normal = ExtResource("3_2awo4")
texture_pressed = ExtResource("4_jcnox")
stretch_mode = 0

[node name="Tutorial_HG" type="TextureButton" parent="Button_Manager"]
layout_mode = 0
offset_left = 266.0
offset_top = 21.0
offset_right = 331.0
offset_bottom = 98.0
texture_normal = ExtResource("6_7g5tu")
texture_pressed = ExtResource("7_kua6a")
stretch_mode = 0

[node name="Tutorial_NomNom" type="TextureButton" parent="Button_Manager"]
layout_mode = 0
offset_left = 946.0
offset_top = 21.0
offset_right = 1011.0
offset_bottom = 98.0
texture_normal = ExtResource("6_7g5tu")
texture_pressed = ExtResource("7_kua6a")
stretch_mode = 0

[node name="Exit_Button" type="TextureButton" parent="Button_Manager"]
layout_mode = 0
offset_left = 1056.0
offset_top = -598.0
offset_right = 1132.0
offset_bottom = -522.0
texture_normal = ExtResource("8_q2qx5")
texture_pressed = ExtResource("9_qltld")

[node name="MiniGame_Animations" type="Node2D" parent="."]
script = ExtResource("8_ojtqv")

[node name="HelloAnimation" type="AnimationPlayer" parent="MiniGame_Animations"]
libraries = {
&"": SubResource("AnimationLibrary_clv4g")
}

[node name="Hand_R" type="Sprite2D" parent="MiniGame_Animations"]
position = Vector2(466.271, 454.739)
rotation = -2.89376
scale = Vector2(0.335373, -0.335373)
texture = ExtResource("8_ffxa7")

[node name="Hand_L" type="Sprite2D" parent="MiniGame_Animations"]
position = Vector2(188, 335)
rotation = -0.366519
scale = Vector2(0.335, 0.335)
texture = ExtResource("9_dkkfp")

[node name="JumpingAnimation" type="AnimationPlayer" parent="MiniGame_Animations"]
libraries = {
&"": SubResource("AnimationLibrary_q2qx5")
}

[node name="Shadow" type="Sprite2D" parent="MiniGame_Animations"]
position = Vector2(874, 615)
texture = ExtResource("11_clv4g")

[node name="Monster_w_Basket" type="Sprite2D" parent="MiniGame_Animations"]
position = Vector2(898.234, 500)
rotation = 0.0261799
scale = Vector2(1.01931, 1.01931)
texture = ExtResource("10_1j3ny")

[node name="D_Glove" type="Sprite2D" parent="MiniGame_Animations"]
position = Vector2(1146, 327)
texture = ExtResource("11_1j3ny")

[node name="Sandwich" type="Sprite2D" parent="MiniGame_Animations"]
position = Vector2(1145, 310)
scale = Vector2(0.203125, 0.203125)
texture = ExtResource("11_dkkfp")

[node name="TutorialVideo" type="VideoStreamPlayer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1600.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
loop = true

[node name="Close_Tutorial" type="TextureButton" parent="."]
visible = false
offset_left = 1169.0
offset_top = 36.0
offset_right = 1245.0
offset_bottom = 112.0
texture_normal = ExtResource("8_q2qx5")
texture_pressed = ExtResource("9_qltld")

[connection signal="pressed" from="Button_Manager/Play_HG" to="." method="_on_play_hg_pressed"]
[connection signal="pressed" from="Button_Manager/Play_NomNom" to="." method="_on_play_nom_nom_pressed"]
[connection signal="pressed" from="Button_Manager/Tutorial_HG" to="." method="_on_tutorial_hg_pressed"]
[connection signal="pressed" from="Button_Manager/Tutorial_NomNom" to="." method="_on_tutorial_nom_nom_pressed"]
[connection signal="pressed" from="Button_Manager/Exit_Button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Close_Tutorial" to="." method="_on_close_tutorial_pressed"]
